--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "MC-Bot",
-  "version": "1.0.0",
+  "name": "Test",
+  "description": "Test",
+  "version": "0.0.0",
   "main": "bot.js",
   "scripts": {
-    "start": "node bot.js",
-    },
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "discord.js": "^11.4.2",
+    "discord.js": "11.1.0",
     "request": "2.81.0"
-    }
+  }
 }
