--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
-  "main": "bot.js",
+  "name": "minecraft-server-bot",
+  "version": "1.1.0",
+  "description": "minecraft server status bot",
+  "main": "mcbot.js",
   "scripts": {
-    "start": "node bot.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lerokko/mcstatusbot.git"
+  },
+  "author": "lerokko adapted by Huskydog9988",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/lerokko/mcstatusbot/issues"
+  },
+  "homepage": "https://github.com/lerokko/mcstatusbot#readme",
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "discord.js": "^11.4.2",
+    "request": "^2.88.0"
   }
 }
